# BinancePlatform

./: .gitignore  .ruff.toml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  README.zh-CN.md  SECURITY.md  decision_mapper.py  degraded_mode_support.py  exchange_support.py  live_services.py  main.py  market_snapshot_support.py  notify_i18n_support.py  pyproject.toml  qsl.toml  requirements-lock.txt  requirements.txt  run_challenger_robustness.py  run_monthly_shadow_monitor.py  run_shadow_candidate_monitor.py  runtime_config_support.py  runtime_support.py  shadow_replay.py  strategy_core.py  strategy_loader.py  strategy_registry.py  strategy_runtime.py  trade_state_support.py  trend_pool_support.py
.github/workflows/: ai_review.yml  auto_optimization_pr.yml  ci.yml  codex_pr_review.yml  codex_review_gate.yml  dependabot_auto_merge.yml  install-dispatch-guard.yml  main.yml  monthly_report.yml  runner-scheduler-diagnostics.yml  runtime-heartbeat.yml  watchdog.yml
application/: cycle_service.py  execution_service.py  portfolio_service.py  state_service.py
docs/: binance_platform_rename_checklist.md  operator_runbook.md
hourly/2026-03/: 2026-03-22T0101.json  2026-03-22T0201.json  2026-03-22T0301.json  2026-03-22T0601.json  2026-03-22T1001.json  2026-03-22T1201.json  2026-03-22T1501.json  2026-03-22T1901.json  2026-03-22T2001.json  2026-03-23T0001.json  2026-03-23T0101.json  2026-03-23T0501.json  2026-03-23T0802.json  2026-03-23T0901.json  2026-03-23T1001.json  2026-03-23T1101.json  2026-03-23T1201.json  2026-03-23T1601.json  (+59 more)
infra/: binance_runtime.py
reporting/: status_reports.py
research/: backtest.py
scripts/: post_monthly_ai_review_comment.py  prepare_auto_optimization_pr.py  print_strategy_switch_env_plan.py  run_monthly_report_bundle.py  runtime_workflow_heartbeat.py
strategy/: rotation.py
tests/: test_auto_optimization_pr_workflow_config.py  test_binance_runtime_infra.py  test_cycle_service.py  test_decision_mapper.py  test_dispatch_guard_workflow.py  test_execution_service.py  test_main_runtime_error_notification.py  test_market_snapshot_support.py  test_monthly_report_bundle.py  test_monthly_report_workflow_config.py  test_notify_i18n.py  test_portfolio_service.py  test_post_monthly_ai_review_comment.py  test_prepare_auto_optimization_pr.py  test_render_monthly_ai_review.py  test_rotation_strategy.py  test_runtime_config_support.py  test_runtime_support.py  test_runtime_workflow_heartbeat.py  test_runtime_workflow_shared_config.sh  test_shadow_candidate_monitor.py  test_shadow_replay.py  test_status_reports.py  test_strategy_core.py  test_strategy_loader.py  test_strategy_runtime.py  test_trend_pool_loading.py  test_uv_dependency_workflow.py  test_watchdog_workflow.py
(+2094 files in other folders)
