[project]
name = "binance-platform"
version = "0.1.0"
description = "QuantStrategyLab platform layer for Binance exchange."
requires-python = ">=3.11"
dependencies = [
  "quant-platform-kit @ git+https://github.com/QuantStrategyLab/QuantPlatformKit.git@2dee23c125c0b1b60946b3bf9e48ce75991bba36",
  "crypto-strategies @ git+https://github.com/QuantStrategyLab/CryptoStrategies.git@ef78312d7653095f585c4f75d45bf765bedc2751",
  "python-binance",
  "pandas",
  "numpy",
  "requests",
  "google-cloud-firestore",
  "google-cloud-storage",
  "functions-framework",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
  "ruff>=0.12",
]

[tool.uv]
override-dependencies = [
  "quant-platform-kit @ git+https://github.com/QuantStrategyLab/QuantPlatformKit.git@2dee23c125c0b1b60946b3bf9e48ce75991bba36",
]

[tool.ruff]
ignore = ["E701", "E702", "E401", "F541"]
